# rfpapril

./: .env.example  Dockerfile  GEMINI.md  PRD.md  README.md  humanTask.md  pyproject.toml  railway.json  requirements.txt  test.db
.claude/: settings.local.json
.github/workflows/: deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-database-scraper-skeleton/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-business-logic-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-zoho-crm-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
migrations/: env.py
migrations/versions/: 9297db8fc21d_add_zoho_id_and_zohosyncstate.py
src/: main.py
src/database/: models.py  session.py
src/integrations/zoho/: client.py  mapper.py  sync_service.py
src/processor/: broker_engine.py  enrichment.py  error_queue.py  pipeline.py  winner_logic.py
src/scraper/: bc_bids.py  parser.py  processor.py
tests/: test_enrichment.py  test_logic.py  test_models.py  test_persistence.py  test_pipeline.py  test_pipeline_zoho.py  test_scraper.py  test_zoho_client.py  test_zoho_sync.py
